--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,9 @@
 {
-  "name": "Lean Muscle Workout",
+  "name": "Workout Planner",
   "short_name": "Workout",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#0f0f0f",
-  "theme_color": "#ff9800",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "background_color": "#020617",
+  "theme_color": "#22c55e",
+  "icons": []
 }
