--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,18 @@
 {
-  "name": "FitForge - AI Fitness",
-  "short_name": "FitForge",
-  "description": "AI-Powered Fitness & Indian Nutrition Tracker",
+  "name": "SweatItOut",
+  "short_name": "SweatItOut",
+  "description": "AI Fitness & Indian Diet Tracker",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#08080f",
-  "theme_color": "#00e5a0",
-  "orientation": "portrait",
+  "background_color": "#0a0a0a",
+  "theme_color": "#ff4500",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect width='192' height='192' rx='24' fill='%23ff4500'/><text x='96' y='130' text-anchor='middle' font-size='100' font-family='serif'>%F0%9F%94%A5</text></svg>",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     }
-  ],
-  "categories": ["health", "fitness"],
-  "screenshots": []
+  ]
 }
